--- a/templates/mobileLandscapeWarn.hbs
+++ b/templates/mobileLandscapeWarn.hbs
@@ -2,5 +2,10 @@
     <div class="warningWrapper">
         <span class="icon-mobileRotate"></span>
         <p class="warning-message">Please turn your device orientation</p>
+        <div id="installContainer" class="">
+            <button id="butInstall" type="button">
+                Install
+            </button>
+         </div>
     </div>
 </div>
