--- a/templates/whiteboard/toolbar.hbs
+++ b/templates/whiteboard/toolbar.hbs
@@ -16,8 +16,8 @@
         <a href="#" data-title="{{getString 'Line'}}" class="congtooltip"> <span class="icon-line cgIcon"></span></a>
       </div>
 
-      <div id="t_oval{{cn}}" class="tool" data-tool="oval">
-        <a href="#" data-title="{{getString 'Oval'}}" class="congtooltip"> <span class="icon-oval cgIcon"></span></a>
+      <div id="t_circle{{cn}}" class="tool" data-tool="circle">
+        <a href="#" data-title="{{getString 'Circle'}}" class="congtooltip"> <span class="icon-oval cgIcon"></span></a>
       </div>
 
       <div id="t_triangle{{cn}}" class="tool" data-tool="triangle">
