Button styling for recording network and a/v buttons

--- a/css/modules/network.css
+++ b/css/modules/network.css
@@ -1,5 +1,6 @@
 #virtualclassCont.congrea #networkStatusContainer {
   order: 2;
+  cursor: pointer;
 }
 
 #virtualclassCont.congrea #virtualclassAppFooterPanel #proposedSpeed {
